--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,13 @@ padding-bottom: 16px;
 button {
     margin: 0 auto;
 }
+
+#start {
+    display: block;
+    margin: auto;
+}
+
+#finish {
+    display: block;
+    margin: auto;
+}
